build: Adapt flags for java 25